<resources>
    <string name="app_name">Smoking control</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="label_password">PASSWORD</string>
    <string name="label_username">USERNAME</string>
    <string name="btn_get_starting">GET STARTING</string>
    <string name="create_account">Create Account</string>
    <string name="not_registered">Not registered?</string>
    <string name="chat">Chat</string>
    <string name="sign_up">Sign Up</string>
    <string name="lb_name">NAME</string>
    <string name="lb_email">EMAIL</string>
    <string name="lb_phone_number">phone number</string>
    <string name="hint_email">email</string>
    <string name="next">Next</string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="lb_old_password">Old Password</string>
    <string name="lb_new_password">New Password</string>
    <string name="lb_confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="forgot_password_android">Forgot Password ?</string>
    <string name="profile_title">Profile</string>
    <string name="setting_title">Setting</string>
    <string name="home_title">Home</string>
    <string name="them_muc_tieu">Add target</string>
    <string name="thanh_tich">Achievement</string>
    <string name="nhan_tin">Chat</string>
    <string name="nguoi_dung">User</string>
    <string name="user_name">Hồ Văn Dương</string>
    <string name="aready_have_an_account">Aready have an account!</string>
    <string name="sign_in">Sign in?</string>
    <string name="send">Send</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="back">Back</string>
    <string name="hint_input">Type message...</string>
    <string name="progress_goals_are_nearly_completed">You near going to complete the target</string>
    <string name="no_target">You have no target, you should add new target!</string>
    <string name="false_target">You did not accomplish your target</string>
    <string name="search_hint">Search...</string>
    <string name="log_out">Log out</string>
    <string name="smoking_app">Smoking App</string>
</resources>