<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/custom_progressbar"
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="hinKeyBoard"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:gravity="center_vertical">

            <ImageView
                android:layout_weight="2"
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/no_smoking"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_weight="1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoking_app"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_username"
                    android:textColor="#FFD55B" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingBottom="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Theme.AppCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_password"
                    android:textColor="#FFD55B" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingBottom="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Theme.AppCompat" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>
                <TextView
                    android:onClick="goToForgotPassword"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_android"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:onClick="goToActivityMain"
                    android:background="@drawable/custom_button"
                    android:text="@string/btn_get_starting" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToSignUp"
                    android:text="@string/create_account"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>