<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hinKeyBoard"
    android:orientation="vertical"
    tools:context=".activities.change_password.ChangePasswordActivity"
    tools:ignore="OnClick"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp"
        android:paddingTop="29dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_change_password"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingVertical="40dp"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_old_password"
            android:textColor="#FFD55B" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lb_old_password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/Theme.AppCompat" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_new_password"
            android:textColor="#FFD55B" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lb_new_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/Theme.AppCompat" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_confirm_password"
            android:textColor="#FFD55B" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lb_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/Theme.AppCompat" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/custom_button"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>